fixing alignment issues

--- a/server/public/assets/styles/home-styles.css
+++ b/server/public/assets/styles/home-styles.css
@@ -17,7 +17,7 @@ body {
 main {
   display: flex;
   background: #161616;
-  height: 100%;
+  /* height: 100%; */
 }
 
 a {
@@ -32,8 +32,10 @@ a {
   flex: 1;
   display: flex;
   color: #eadeda;
-  align-items: center;
-  justify-content: center;
+  /* align-items: center;
+  justify-content: center; */
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 
 .site__inner {
